--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -1,4 +1,83 @@
 .homepage-container {
   height: 100vh;
   width: 100vw;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 0px;
+  grid-template-rows: 1fr 1fr 1fr;
 }
+
+.grid-box {
+  border: 5px solid #3A7E85;
+  background-size:cover;
+  background-repeat: no-repeat;
+  height: 33vh;
+  width: 25vw;
+}
+
+.one {
+  background-image: url('/public/assets/img1.png');
+  grid-column: 1;
+  grid-row: 1;
+}
+
+.two {
+  background-image: url('/public/assets/login-logo.png');
+  grid-row: 1;
+  grid-column: 2 / 3;
+  width: 50vw;
+  height: 33vh;
+}
+
+.three {
+  background-image: url('/public/assets/img2.png');
+  grid-column: 3;
+  grid-row: 1;
+}
+
+.four {
+    background-image: url('/public/assets/img3.png');
+    grid-column: 1;
+    grid-row: 2;
+  }
+
+  .five {
+    grid-row: 2;
+    grid-column: 2 / 3;
+    width: 50vw;
+    height: 33vh;
+  }
+
+  .formBox {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-height: 33%;
+  }
+
+  .six {
+    background-image: url('/public/assets/img4.png');
+    grid-column: 3;
+    grid-row: 2;
+  }
+
+  .seven {
+    background-image: url('/public/assets/img5.png');
+    grid-column: 1;
+    grid-row: 3;
+  }
+
+  .eight {
+      background-image: url('/public/assets/img6.png');
+      grid-row: 3;
+      grid-column: 2 / 3;
+      width: 50vw;
+      height: 33vh;
+      background-size: 100% 100%;
+    }
+
+  .nine {
+    background-image: url('/public/assets/img7.png');
+    grid-column: 3;
+    grid-row: 3;
+  }
